--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invictus Botanical Shop</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="hero-container">
@@ -34,13 +37,14 @@
              <p class="small-heading">
                 Welcome to invictus botanical shop
              </p>
-             <p>
-                <h1> A one stop solution shop to your home garden</h1>
+             <p class="description">
+                <h1 class="mainhead"> A one stop solution shop to your home garden</h1>
              </p>
-             <p>
+             <p class="description">
                 at invictus botanical shop, we are all about home and plants and aesthetics. We offer a wide range of house plants, adorable flowers and indoor plants to make your garden beautiful
 
              </p>
+             <button>Learn more about us</button>
 
         </div>
         <div class="rigt-side">
